<resources>
    <string name="app_name">heatmap</string>
    <string name="title_activity_maps">HeatMap</string>ç

    <string name="titleNotFound">No se ha encontrado información</string>
    <string name="descNotFound">No se ha podido encontrar información sobre el lugar indicado\n¿Desea obtener una aproximación con los lugares circundantes?</string>
    <string name="infoNotFound">¡Esta busqueda puede tardar algo de tiempo!</string>

    <string name="Continue">Continuar</string>
    <string name="Cancel">Cancelar</string>
    <string name="Okay">Aceptar</string>
    <string name="dialogSelectTitle">Cargar búsqueda anterior</string>
    <string name="infoSitio">Información dias</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>