<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infoLocale"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"

    android:paddingBottom="32dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="42dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/tvInfoLocale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/infoSitio"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvMonday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMonday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lunes"

        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTuesday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pbMonday"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"

        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tvTuesday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvMonday"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/tvTuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/martes"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvWeds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMonday" />

    <ProgressBar
        android:id="@+id/pbTuesday"
        android:max="50"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tvWeds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTuesday"
        app:layout_constraintVertical_bias="0.127" />

    <TextView
        android:id="@+id/tvWeds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/miercoles"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvThursday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTuesday" />

    <ProgressBar
        android:id="@+id/pbWeds"
        android:max="50"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tvThursday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvWeds"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/tvThursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/jueves"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvFriday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeds" />

    <ProgressBar
        android:id="@+id/pbThursday"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:max="50"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tvFriday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvThursday"
        app:layout_constraintTop_toTopOf="@+id/tvThursday"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/tvFriday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/viernes"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvSaturday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvThursday" />

    <ProgressBar
        android:id="@+id/pbFriday"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:max="50"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tvSaturday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvFriday"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/tvSaturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sabado"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvSunday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFriday" />

    <ProgressBar
        android:id="@+id/pbSaturday"
        android:max="50"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvSaturday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvSaturday" />

    <TextView
        android:id="@+id/tvSunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/domingo"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSaturday" />

    <ProgressBar
        android:id="@+id/pbSunday"
        android:max="50"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvSunday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvSunday" />


</androidx.constraintlayout.widget.ConstraintLayout>